2010-02-17      1.7004  New UK allocations;
                        UK geographic numbers are no longer assumed to
                          be fixed lines - damn those VoIP providers!

2009-10-18      1.7003  Minor bugfix, see https://rt.cpan.org/ ticket 48581;
                        New UK allocations

2009-04-22      1.7002  Fix minor bug (...::UK constructor returning 0
                          instead of undef for (some?) invalid numbers,
                          reported by Tomasz Chomiuk;
                        New UK allocations

2009-03-04      1.7001  Kill warnings about GE being deprecated;
                        Add missing dep on Digest::MD5

2009-02-26      1.7     Fix formatting for valid but unallocated UK numbers;
                        One of the UK telcos whose name we check for in
                          tests renamed itself;
                        New UK allocations;
                        Added country-to-code and national/international
                          prefix data to N::P::C, thanks to Michael Schout

2008-05-27      1.6     Magic country detection now works (thanks to
                          Jos Boumans for reporting the bug);
                        New UK allocations

2008-02-27      1.581   Added dependency on perl 5.006 (DBM::Deep uses 'our');
                        Removed docs from N::P::UK::DBM::Deep and
                          replaced with note about its status;
                        New UK allocations;
                        Removed t/pod* temporarily
2007-06-01      1.58    Number::Phone::Country updated to reflect KM/YT split
                          Mayotte moved into parts of +262, so now shares with
                          Reunion instead of Comoros
                        New UK allocations (in particular 03 range)
2007-03-13      1.57    New UK allocations;
                        Bundle DBM::Deep cos old version is incompatible
2007-02-24      1.5601  New UK allocations